--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
 		<div class="main-container">
 			<div class="greeting-wrapper">
 			   <img src= "{% static 'images/logo.png' %}" style="width:120px;margin-top:20px">
-				<h3>Nwabueze Gilbert(Gilish -Tech /Senior Web  Developer)</h3>
+				<h3>Gilberto Diamond(Gilish -Tech /Senior Web  Developer)</h3>
 			</div>
 
 
@@ -45,7 +45,7 @@
 				</div>
 
 				<div class="left-column">
-					<img id="profile_pic" src="{% static  'images/Gilberto.JPG' %}" onclick="solve()">
+					<img id="profile_pic" src="{% static  'images/gilberto.png' %}" onclick="solve()">
 					<h5 style="text-align: center;line-height: 0;">Personalize Theme</h5>
 
 					<div id="theme-options-wrapper">
