--- a/templates/index.html
+++ b/templates/index.html
@@ -28,25 +28,22 @@
 							<li>Python</li>
 							<li>Django</li>
 							<li>JavaScript</li>
-							<li>React</li>
 							<li>Postgresql</li>
+							<li>Aws</li>
 							<li>Blockchain(Web3)- Expert</li>
-							<li>Photoshop- Expert</li>
-							<li>Cybersecurity </li>
 							<li>Mobile app developer(react native)</li>
 							
 						</ul>
 
 						<ul>
-							<li>Data Analytics</li>
-							<li>Video editor</li>
+							<li>Data Analytics/Data Science</li>
+							<li>Fastapi</li>
 							<li>2d Animator</li>
 							<li>Heroku</li>
 							<li>HTML/CSS</li>
 							<li>Bot Creator</li>
-							<li>Professional coder</li>
-							<li>Songwriter/Musical- Artiste</li>
-							<li>Songwriter/Musical- Artiste</li>
+							<li>Node/express js</li>
+							
 						</ul>
 
 					</div>
@@ -75,11 +72,11 @@
 
 				<div>
 					<div class="post">
-						<img class="thumbnail" src="https://i.ytimg.com/vi/BTGIwCFwz2M/maxresdefault.jpg">
+						<img class="thumbnail" src="{% static 'images/Capture.PNG' %}">
 						<div class="post-preview">
-							<h6 class="post-title">My 2d Animation</h6>
-							<p class="post-intro">This is one of my animation project. I was actually learning
-								animation so i decided to work on a project..Not that good but trust me i am better now....
+							<h6 class="post-title">Fullstack Ecommerce Website</h6>
+							<p class="post-intro">
+							   This is a full-stack ecommerce website, built with Django and React, that involves webscraping for a wide range of products.
 
 							</p>
 							<a href="https://www.youtube.com/watch?v=BTGIwCFwz2M">Read More</a>
@@ -102,8 +99,8 @@
 					<div class="post">
 						<img class="thumbnail" src="{% static   'images/gilishtokenpic.PNG' %}">
 						<div class="post-preview">
-							<h6 class="post-title">Membership Website</h6>
-							<p class="post-intro">Modulized guide for online courses with step by  step intructions</p>
+							<h6 class="post-title">Simple Web3 project</h6>
+							<p class="post-intro">Decentralized finance app(DEFI)</p>
 							<a href="https://gilish-tech-dapp.netlify.app">Read More</a>
 						</div>
 					</div>
