--- a/templates/index.html
+++ b/templates/index.html
@@ -79,7 +79,7 @@
 							   This is a full-stack ecommerce website, built with Django and React, that involves webscraping for a wide range of products.
 
 							</p>
-							<a href="https://www.youtube.com/watch?v=BTGIwCFwz2M">Read More</a>
+							<a href="https://gilish-tech.netlify.app/">Read More</a>
 						</div>
 					</div>
 				</div>
