--- a/templates/base.html
+++ b/templates/base.html
@@ -73,7 +73,7 @@
 							<div id="corner-tl" class="corner"></div>
 							<div id="corner-tr" class="corner"></div>
 							<h3>{% block facto %} What I Do {% endblock  %}</h3>
-							<p>{% block fact %} I was a local tutor.. But now i am a freelancer {% endblock %}</p>
+							<p>{% block fact %} I am a veteran software engineer {% endblock %}</p>
 							<div id="corner-br" class="corner"></div>
 							<div id="corner-bl" class="corner"></div>
 						</div>
